Added compatibility with java 8